--- a/templates/shop/product/detail.html
+++ b/templates/shop/product/detail.html
@@ -1,19 +1,50 @@
 {% extends "base/base.html" %}
 {% load static %}
 {% block title %}
-    {% if category %}{{ category.title }}{% else %}Products{% endif %}
+{% if category %}{{ category.title }}{% else %}Products{% endif %}
 {% endblock %}
 {% block content %}
-    <div class="product-detail">
-        <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}">
-        <h1>{{ product.name }}</h1>
-        <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
-       <p class="price">${{ product.price }}</p>
-<form action="{% url 'cart:cart_add' product.id %}" method="post">
-    {{ cart_product_form }}
-    {% csrf_token %}
-    <input type="submit"  value="Add to cart">
-</form>
-        {{ product.description|linebreaks }}
+<div class="container">
+
+    <div class="row">
+
+      <div class="col-lg-3">
+        <h1 class="my-4">Shop Name</h1>
+        <div class="list-group">
+          <a href="#" class="list-group-item active">Category 1</a>
+          <a href="#" class="list-group-item">Category 2</a>
+          <a href="#" class="list-group-item">Category 3</a>
+        </div>
+      </div>
+      <!-- /.col-lg-3 -->
+
+      <div class="col-lg-9">
+
+        <div class="card mt-4">
+          <img class="card-img-top img-fluid" src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'images/no_img.png' %}{% endif %}" alt="">
+          <div class="card-body">
+            <h3 class="card-title">{{ product.name }}</h3>
+            <h4>$24.99</h4>
+             <p>Category: <a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></p>
+            <p class="card-text">{{ product.description|linebreaks }}</p><form class="form-inline" action="{% url 'cart:cart_add' product.id %}" method="post">
+                    <div class="form-group ">
+                        <label for="quantity">Quantity:</label>
+                        {{ cart_product_form.quantity }}
+                    </div>
+                    {% csrf_token %}
+                    <input type="submit" value="Add to cart">
+                </form>
+          </div>
+        </div>
+        <!-- /.card -->
+
+        <div class="alert alert-warning my-4" role="alert">
+            <strong>DEMO!</strong> This product is not real and does not exist in reality
+        </div>
+
+      </div>
+      <!-- /.col-lg-9 -->
+
     </div>
+</div>
 {% endblock %}
